src/main/resources/css/maven-theme.css
/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

a.newWindow {
  background: url('../images/window-new.png') right center no-repeat;
  padding-right: 18px;
}

li.none {
  list-style: none;
}

.search-query {
  width:95%;
}

.sidebar-nav .search-query {
  width: calc(100% - 30px);
}

body.topBarEnabled {
  /* calculated height of the topbar */
  padding-top: 43px;
}

div.container-top,
div.container-fluid-top {
  /* Bootstrap already adds 10 px to <h1> */
  padding-top: 10px;
}

.builtBy {
  display: block;
}
img.builtBy {
  margin: 10px auto;
}

#search-form {
  margin-left: 9px;
  margin-right: 9px;
}

/* Tweaks to the bootstrap theme
--------------------------------- */

/* avoid greyed list items */
li {
  color:#404040;
}

/* avoid transparent background of table */
table.zebra-striped {
  background-color:#FFF;
}

/* avoid transparent footer */
.footer {
  background-color:#EEE;
}

/* align with adjustments of http://twitter.github.com/bootstrap/examples/fluid.html */
.sidebar-nav {
  padding-left: 0px;
  padding-right: 0px;
}

.sidebar-nav .icon-chevron-right, .sidebar-nav .icon-chevron-down {
  margin-top: 2px;
  margin-right: -6px;
  float: right;
  opacity: 0.25;
}

/* MSKINS-79: pull-right compresses list items */
li.pull-right {
  margin-left: 3px;
  margin-right: 3px;
}

.well {
  margin-bottom: 10px;
}

a.dropdown-toggle {
  cursor: pointer;
}

h1 > code,
h2 > code,
h3 > code,
h4 > code,
h5 > code {
  font-size: unset;
}

.table th,
.table td {
  text-align: revert;
}

/* linked code must be styled in same color as plain links */
a > code {
  color: #0088cc;
}

